crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D100_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/D.py:1:1: D100 Missing docstring in public module
  |
1 | # No docstring, so we can test D100
  |  D100
2 | from functools import wraps
3 | import os
  |


