crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D101_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/D.py:15:7: D101 Missing docstring in public class
   |
15 | class class_:
   |       ^^^^^^ D101
16 | 
17 |     expect('meta', 'D419: Docstring is empty')
   |


