crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D102_setter.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: PublicMethod
    body: Missing docstring in public method
    commit: ~
    fixable: false
  location:
    row: 16
    column: 8
  end_location:
    row: 16
    column: 11
  fix: ~
  parent: ~

