crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D105_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: MagicMethod
    body: Missing docstring in magic method
    commit: ~
    fixable: false
  location:
    row: 64
    column: 8
  end_location:
    row: 64
    column: 15
  fix: ~
  parent: ~

