crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D107_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/D.py:60:9: D107 Missing docstring in `__init__`
   |
60 |     @expect('D107: Missing docstring in __init__')
61 |     def __init__(self=None):
   |         ^^^^^^^^ D107
62 |         pass
   |

./resources/test/fixtures/pydocstyle/D.py:534:9: D107 Missing docstring in `__init__`
    |
534 |     """
535 | 
536 |     def __init__(self, x):
    |         ^^^^^^^^ D107
537 |         pass
    |


