crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D200_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
D.py:129:5: D200 [*] One-line docstring should fit on one line
    |
127 |   @expect('D212: Multi-line docstring summary should start at the first line')
128 |   def asdlkfasd():
129 |       """
    |  _____^
130 | |     Wrong.
131 | |     """
    | |_______^ D200
    |
    = help: Reformat to one line

ℹ Suggested fix
126 126 |         '(found 3)')
127 127 | @expect('D212: Multi-line docstring summary should start at the first line')
128 128 | def asdlkfasd():
129     |-    """
130     |-    Wrong.
131     |-    """
    129 |+    """Wrong."""
132 130 | 
133 131 | 
134 132 | @expect('D201: No blank lines allowed before function docstring (found 1)')

D.py:597:5: D200 [*] One-line docstring should fit on one line
    |
595 |   @expect('D212: Multi-line docstring summary should start at the first line')
596 |   def one_liner():
597 |       """
    |  _____^
598 | | 
599 | |     Wrong."""
    | |_____________^ D200
    |
    = help: Reformat to one line

ℹ Suggested fix
594 594 |         '(found 3)')
595 595 | @expect('D212: Multi-line docstring summary should start at the first line')
596 596 | def one_liner():
597     |-    """
598     |-
599     |-    Wrong."""
    597 |+    """Wrong."""
600 598 | 
601 599 | 
602 600 | @expect('D200: One-line docstring should fit on one line with quotes '

D.py:606:5: D200 [*] One-line docstring should fit on one line
    |
604 |   @expect('D212: Multi-line docstring summary should start at the first line')
605 |   def one_liner():
606 |       r"""Wrong.
    |  _____^
607 | | 
608 | |     """
    | |_______^ D200
    |
    = help: Reformat to one line

ℹ Suggested fix
603 603 |         '(found 3)')
604 604 | @expect('D212: Multi-line docstring summary should start at the first line')
605 605 | def one_liner():
606     |-    r"""Wrong.
607     |-
608     |-    """
    606 |+    r"""Wrong."""
609 607 | 
610 608 | 
611 609 | @expect('D200: One-line docstring should fit on one line with quotes '

D.py:615:5: D200 One-line docstring should fit on one line
    |
613 |   @expect('D212: Multi-line docstring summary should start at the first line')
614 |   def one_liner():
615 |       """Wrong."
    |  _____^
616 | | 
617 | |     """
    | |_______^ D200
    |
    = help: Reformat to one line

D.py:624:5: D200 One-line docstring should fit on one line
    |
622 |   @expect('D212: Multi-line docstring summary should start at the first line')
623 |   def one_liner():
624 |       """
    |  _____^
625 | | 
626 | |     "Wrong."""
    | |______________^ D200
    |
    = help: Reformat to one line

D.py:645:5: D200 One-line docstring should fit on one line
    |
644 |   def single_line_docstring_with_an_escaped_backslash():
645 |       "\
    |  _____^
646 | |     "
    | |_____^ D200
    |
    = help: Reformat to one line


