crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D200_D200.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
D200.py:2:5: D200 One-line docstring should fit on one line
  |
1 |   def func():
2 |       """\
  |  _____^
3 | |     """
  | |_______^ D200
  |
  = help: Reformat to one line

D200.py:7:5: D200 [*] One-line docstring should fit on one line
  |
6 |   def func():
7 |       """\\
  |  _____^
8 | |     """
  | |_______^ D200
  |
  = help: Reformat to one line

ℹ Suggested fix
4 4 | 
5 5 | 
6 6 | def func():
7   |-    """\\
8   |-    """
  7 |+    """\\"""
9 8 | 
10 9 | 
11 10 | def func():

D200.py:12:5: D200 One-line docstring should fit on one line
   |
11 |   def func():
12 |       """\ \
   |  _____^
13 | |     """
   | |_______^ D200
   |
   = help: Reformat to one line


