crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D201_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 137
    column: 4
  end_location:
    row: 137
    column: 24
  fix:
    edits:
      - location:
          row: 136
          column: 0
        end_location:
          row: 137
          column: 0
        content: ~
  parent: ~
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 151
    column: 4
  end_location:
    row: 151
    column: 37
  fix:
    edits:
      - location:
          row: 150
          column: 0
        end_location:
          row: 151
          column: 0
        content: ~
  parent: ~
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 546
    column: 4
  end_location:
    row: 549
    column: 7
  fix:
    edits:
      - location:
          row: 545
          column: 0
        end_location:
          row: 546
          column: 0
        content: ~
  parent: ~
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 568
    column: 4
  end_location:
    row: 571
    column: 7
  fix:
    edits:
      - location:
          row: 567
          column: 0
        end_location:
          row: 568
          column: 0
        content: ~
  parent: ~

