crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D202_D202.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: NoBlankLineAfterFunction
    body: No blank lines allowed after function docstring (found 2)
    commit: Remove blank line(s) after function docstring
    fixable: true
  location:
    row: 57
    column: 4
  end_location:
    row: 57
    column: 30
  fix:
    content: ""
    location:
      row: 58
      column: 0
    end_location:
      row: 60
      column: 0
  parent: ~
- kind:
    name: NoBlankLineAfterFunction
    body: No blank lines allowed after function docstring (found 2)
    commit: Remove blank line(s) after function docstring
    fixable: true
  location:
    row: 68
    column: 4
  end_location:
    row: 68
    column: 30
  fix:
    content: ""
    location:
      row: 69
      column: 0
    end_location:
      row: 71
      column: 0
  parent: ~
- kind:
    name: NoBlankLineAfterFunction
    body: No blank lines allowed after function docstring (found 1)
    commit: Remove blank line(s) after function docstring
    fixable: true
  location:
    row: 80
    column: 4
  end_location:
    row: 80
    column: 30
  fix:
    content: ""
    location:
      row: 81
      column: 0
    end_location:
      row: 82
      column: 0
  parent: ~

